[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_main_menu"]
[ext_resource type="Environment" uid="uid://world_env" path="res://themes/WorldEnvironment.tres" id="2_env"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.05, 0.05, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.3, 0, 0.3, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0, 1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0, 0.3, 0.3, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 1, 1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_env")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "NEON PONG"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HighScoreLabel" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "High Score: 0"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="DifficultyButton" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_font_sizes/font_size = 32
text = "Difficulty: Medium"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_font_sizes/font_size = 32
text = "QUIT"
